--- a/css/main.css
+++ b/css/main.css
@@ -25,3 +25,109 @@ html {
     margin: 0;
     padding: 0;
   }
+
+  body {
+    line-height: 0;
+    margin: 0;
+  }
+
+  img {
+    width: 100%;
+    margin-top: 0;
+    padding: 0;
+  }
+
+  img:nth-child(2) {
+    display: none;
+  }
+
+  img:nth-child(5) {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 25em) {
+
+  html {
+    margin: 0;
+    padding: 0;
+  }
+
+  body {
+    line-height: 0;
+  }
+
+  img {
+    width: 50%;
+    float: left;
+  }
+
+  img:nth-child(1) {
+    width: 100%;
+  }
+
+  img:nth-child(2),
+  img:nth-child(5) {
+    display: block;
+  }
+}
+
+@media only screen and (min-width: 38em) {
+
+  body {
+    margin: 0;
+    padding: 0;
+  }
+
+  img {
+    float:left;
+  }
+
+  img:nth-child(5) {
+    display: none;
+  }
+
+  img:nth-child(2),
+  img:nth-child(3),
+  img:nth-child(4),
+  img:nth-child(5) {
+    width: 33.3333%;
+  }
+
+  img:nth-child(1) {
+    width: 100%;
+  }
+}
+
+@media only screen and (min-width: 60em) {
+
+  body {
+    margin: 0;
+    padding: 0;
+  }
+
+  img {
+    float: left;
+  }
+
+  img:nth-child(1) {
+    width: 66.6666%;
+    float: left;
+  }
+
+  img:nth-child(2),
+  img:nth-child(3),
+  img:nth-child(4),
+  img:nth-child(5) {
+    width: 33.3333%;
+  }
+
+  img:nth-child(4)
+  img:nth-child(5) {
+    float: right;
+  }
+
+  img:nth-child(5) {
+    display: block;
+  }
+}
