--- a/css/main.css
+++ b/css/main.css
@@ -19,11 +19,6 @@ html {
   box-sizing: inherit;
 }
 
-html {
-  margin: 0;
-  padding: 0;
-}
-
 body {
   margin: 0;
   padding: 0;
@@ -32,6 +27,7 @@ body {
 img {
   margin: 0;
   padding: 0;
+  display: block;
 }
 
 @media only screen and (min-width: 20em) {
